# RLTBench

./: .gitignore  Benchmark.txt  README.md  pyproject.toml
configs/: prompt_profiles.yaml  verilogeval.yaml
dashboard/: index.html
docs/: baseline_v0.2_per_task_failure_matrix.md
reports/: baseline_v0.2_failure_matrix.csv  baseline_v0.2_failure_matrix.md  qwen36_27b_rtl_benchmark_summary.md  qwen36_27b_vs_qwen36_35b_a3b_public_benchmarks.md  qwen36_27b_vs_qwen36_35b_a3b_verilogeval.md  qwen36_35b_a3b_output_manifest.md  qwen3_coder_30b_a3b_instruct_output_manifest.md  rtlopt_qwen36_35b_a3b_yosys_equiv_baseline.md  v0.3_qwen36_27b_prompt_smoke_summary.csv  v0.3_qwen36_27b_prompt_smoke_summary.md  v0.4_ppa_validation40_conservative_v2_summary.csv  v0.4_ppa_validation40_conservative_v2_summary.md  v0.4_ppa_validation40_neutral_summary.csv  v0.4_ppa_validation40_neutral_summary.md  v0.4_ppa_validation40_neutral_vs_conservative_v2.csv  v0.4_ppa_validation40_neutral_vs_conservative_v2.md  v0.5_rfid_apbench_idle_counter_correctness_investigation.csv  v0.5_rfid_apbench_idle_counter_correctness_investigation.md  v0.6_rfid_apbench_3sample_baseline.csv  v0.6_rfid_apbench_3sample_baseline.jsonl  v0.6_rfid_apbench_3sample_baseline.md  v0.7_rfid_apbench_ap001_post_clarity_targeted_validation.csv  v0.7_rfid_apbench_ap001_post_clarity_targeted_validation.jsonl  v0.7_rfid_apbench_ap001_post_clarity_targeted_validation.md  v0.7_rfid_apbench_post_fix_failure_analysis.md  v0.7_rfid_apbench_profile_rejected_closeout.md  v0.7_rfid_apbench_thinking_disabled_closeout.md  (+2 more)
(+58 files in other folders)
