[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtlbench"
version = "0.1.0"
description = "Reusable RTL benchmark harness for OpenAI-compatible model endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
rtlbench = "rtlbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

